Add env to Drupal

--- a/drupal/composer.json
+++ b/drupal/composer.json
@@ -19,10 +19,14 @@
         "drupal/core-composer-scaffold": "^9.2",
         "drupal/core-project-message": "^9.2",
         "drupal/core-recommended": "^9.2",
-        "drush/drush": "^10.5"
+        "drush/drush": "^10.5",
+        "vlucas/phpdotenv": "^5.3"
     },
     "conflict": {
         "drupal/drupal": "*"
+    },
+    "autoload": {
+        "files": ["load.environment.php"]
     },
     "minimum-stability": "alpha",
     "prefer-stable": true,
